<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_time_table">

    <fragment
        android:id="@+id/nav_time_table"
        android:name="com.brains404.scheduler.ui.time_table.TimeTableFragment"
        android:label="@string/menu_time_table"
        tools:layout="@layout/time_table_tabs" />
    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.brains404.scheduler.ui.tasks.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/task_tabs" />
    <activity
        android:id="@+id/nav_statistics"
        android:name="com.brains404.scheduler.ui.settings.SettingsActivity"
        android:label="@string/menu_statistics"
        tools:layout="@layout/settings_activity" />
    <activity
        android:id="@+id/nav_settings"
        android:name="com.brains404.scheduler.ui.settings.SettingsActivity"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_activity"  />

    <activity
        android:id="@+id/nav_feedback"
        android:name="com.brains404.scheduler.ui.feedback.FeedbackActivity"
        android:label="@string/menu_feedback"
        tools:layout="@layout/activity_feedback" />
    <!-- //TODO Add Fragments here -->
</navigation>