<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_container_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.time_table.editSession">


        <TableRow
            android:id="@+id/tr_time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_margin"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginTop="@dimen/form_margin"
                android:layout_marginEnd="@dimen/label_margin_right"
                android:layout_marginRight="@dimen/label_margin_right"
                android:layout_marginBottom="@dimen/form_margin"
                android:text="@string/label_startTime"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/label_size"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_startTime_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:background="?attr/buttonColor"
                android:text="@string/default_start_time"
                android:textColor="?attr/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin"
                android:layout_marginEnd="@dimen/label_margin_right"
                android:layout_marginRight="@dimen/label_margin_right"
                android:layout_marginBottom="@dimen/form_margin"
                android:text="@string/label_endTime"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/label_size"

                />

            <Button
                android:id="@+id/btn_endTime_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:background="?attr/buttonColor"
                android:text="@string/default_end_time"
                android:textColor="?attr/textColor" />
        </TableRow>

        <EditText
            android:id="@+id/et_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr_time_edit"
            android:layout_margin="@dimen/form_margin"
            android:drawableStart="@drawable/ic_name"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="5dp"
            android:drawableTint="?attr/tintColor"
            android:hint="@string/hint_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/hintTextColor" />

        <EditText
            android:id="@+id/et_place_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_title_edit"
            android:layout_margin="@dimen/form_margin"
            android:drawableStart="@drawable/ic_place"
            android:drawableLeft="@drawable/ic_place"
            android:drawablePadding="5dp"
            android:drawableTint="?attr/tintColor"
            android:hint="@string/hint_place"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/hintTextColor" />

        <CheckBox
            android:id="@+id/ch_notify_session_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_place_edit"
            android:layout_margin="@dimen/form_margin"
            android:text="@string/checkbox_notify_me"
            android:textColor="?attr/textColor"
            app:buttonTint="?attr/tintColor" />

        <TimePicker
            android:id="@+id/tp_start_time_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:visibility="gone" />

        <TimePicker
            android:id="@+id/tp_end_time_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editSession_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ch_notify_session_edit"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/form_margin"
            android:background="?attr/buttonColor"
            android:padding="@dimen/padding_button"
            android:text="@string/btn_editSession"
            android:textColor="?attr/textColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editSession_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_editSession_edit"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/form_margin"
            android:background="?attr/buttonColorNegative"
            android:padding="@dimen/padding_button"
            android:text="@string/btn_delete"
            android:textColor="?attr/customWhite" />

    </RelativeLayout>
</ScrollView>